--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "react-native-maps": "1.14.0",
     "expo-location": "~17.0.1",
     "expo-sensors": "~13.0.4",
+    "expo-permissions": "~14.4.0",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
     "expo-auth-session": "~5.5.2",
     "expo-crypto": "~13.0.1",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1"
+    "react-native-reanimated": "~3.10.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@uguratakan/react-native-step-counter": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
