. Missing Babel preset Added babel-preset-expo to devDependencies Version: ~11.0.0 (compatible with Expo SDK 54) 2. Google OAuth implementation Updated AuthContext.tsx to use expo-web-browser for OAuth flow Added deep link handling for OAuth callbacks Uses Linking.createURL() for proper redirect URLs Handles OAuth session completion with WebBrowser.maybeCompleteAuthSession() Added expo-web-browser dependency 3. Supabase session persistence Updated Supabase client to use AsyncStorage adapter Sessions persist across app restarts Proper storage adapter implementation 4. TypeScript configuration Fixed tsconfig.json for Expo SDK 54 Changed moduleResolution to "bundler" (required for Expo SDK 54) Removed problematic extends that was causing issues Added proper includes for Expo types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,23 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
-    }
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "target": "esnext",
+    "lib": [
+      "esnext"
+    ],
+    "module": "esnext"
   },
   "include": [
     "**/*.ts",
@@ -19,6 +25,6 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "extends": "expo/tsconfig.base"
 }
-
