--- a/package.json
+++ b/package.json
@@ -9,33 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@supabase/supabase-js": "^2.39.0",
+    "@tanstack/react-query": "^5.17.19",
+    "expo": "^54.0.25",
+    "expo-auth-session": "~5.5.2",
+    "expo-constants": "~16.0.1",
+    "expo-crypto": "~13.0.1",
+    "expo-linking": "~6.3.1",
+    "expo-web-browser": "~14.0.1",
+    "expo-location": "~17.0.1",
+    "expo-sensors": "~13.0.4",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "~3.31.1",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@supabase/supabase-js": "^2.39.0",
-    "@tanstack/react-query": "^5.17.19",
-    "react-native-maps": "1.14.0",
-    "expo-location": "~17.0.1",
-    "expo-sensors": "~13.0.4",
-    "expo-constants": "~16.0.1",
-    "expo-linking": "~6.3.1",
-    "expo-auth-session": "~5.5.2",
-    "expo-crypto": "~13.0.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "babel-preset-expo": "~11.0.0",
     "typescript": "^5.1.3"
   },
   "private": true
 }
-
