trying fix for ios safari

--- a/app.json
+++ b/app.json
@@ -40,6 +40,10 @@
 				"expo-location",
 				{
 					"locationAlwaysAndWhenInUsePermission": "Allow RotWalker to use your location."
+				},
+				"expo-web-browser",
+				{
+					"useCustomTabs": false
 				}
 			]
 		]
