--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.19",
+    "dotenv": "^17.2.3",
     "expo": "^54.0.25",
     "expo-auth-session": "~7.0.9",
     "expo-constants": "~18.0.10",
